[project]
name = "footfall-analaysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "streamlit>=1.49.1",
    "ultralytics>=8.3.196",
    "yt-dlp>=2025.9.5",
]
